# qqbot_cpp

./: .gitignore  CMakeLists.txt  README.md
docs/: websocket_client_state_machine.md
openspec/changes/archive/2026-03-08-implement-cpp-qqbot-sdk/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-08-implement-cpp-qqbot-sdk/specs/cpp-openapi-client/: spec.md
openspec/changes/archive/2026-03-08-implement-cpp-qqbot-sdk/specs/cpp-sdk-layout/: spec.md
openspec/changes/archive/2026-03-08-implement-cpp-qqbot-sdk/specs/cpp-websocket-client/: spec.md
src/common/: access_token.cpp  access_token.h  bot_config.cpp  bot_config.h  sdk_error.cpp  sdk_error.h  sdk_info.cpp  sdk_info.h  url.cpp  url.h
src/examples/: api_example.cpp  message_reply_example.cpp  smoke_test.cpp
src/message/: message_models.h
src/openapi/: openapi.cpp  openapi.h
src/openapi/v1/: openapi_v1.cpp  openapi_v1.h  resource.cpp  resource.h
src/sdk/: bot_sdk.cpp  bot_sdk.h
src/transport/: http_transport.cpp  http_transport.h
src/websocket/: websocket_client.cpp  websocket_client.h
